Add service properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ server.port=8000
 
 zuul.routes.admin.url=FLIGHT-ADMIN-SERVICE
 zuul.routes.admin.path=/flight-admin-service/**
+
+zuul.routes.shopping.url=FLIGHT-SHOPPING-SERVICE
+zuul.routes.shopping.path=/flight-shopping-service/**
+
+zuul.routes.booking.url=FLIGHT-BOOKING-SERVICE
+zuul.routes.booking.path=/flight-booking-service/**
+
+zuul.routes.postbooking.url=FLIGHT-POSTBOOKING-SERVICE
+zuul.routes.postbooking.path=/flight-postbooking-service/**
