--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=zuul-api-gateway
 
 server.port=8000
 
+zuul.sensitiveHeaders=Cookie,Set-Cookie
+zuul.ignoredServices='*'
+
 zuul.routes.admin.url=FLIGHT-ADMIN-SERVICE
 zuul.routes.admin.path=/flight-admin-service/**
 
