Config read timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=8000
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 zuul.ignoredServices='*'
 
+ribbon.readtimeout=1000
+
 zuul.routes.admin.url=FLIGHT-ADMIN-SERVICE
 zuul.routes.admin.path=/flight-admin-service/**
 
