--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8000
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 zuul.ignoredServices='*'
 
-ribbon.readtimeout=60000
+ribbon.ReadTimeout=60000
 
 zuul.routes.admin.url=FLIGHT-ADMIN-SERVICE
 zuul.routes.admin.path=/flight-admin-service/**
@@ -18,3 +18,4 @@ zuul.routes.booking.path=/flight-booking-service/**
 
 zuul.routes.postbooking.url=FLIGHT-POSTBOOKING-SERVICE
 zuul.routes.postbooking.path=/flight-postbooking-service/**
+
